# postgres-browser-proxy

./: .fiveserverrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: build.yml  docker.yml
example/: index.html  index.js  simple.html  style.css  upload-image.js
examples/: geo-location.html  geo-location.js  index.html  style.css  upload-image.html  upload-image.js
examples/img/: LICENSE
scripts/: parse-md.mjs
src/: args.rs  http.rs  image.rs  long_lat.rs  main.rs  misc.rs  parse.rs  query.rs  types.rs
src/files/: index.html  query.js
